--- a/app/assets/scss/pages/home.scss
+++ b/app/assets/scss/pages/home.scss
@@ -1,12 +1,9 @@
 section.discover_city {
 	padding: 176px 20px 99px;
-	background-repeat: no-repeat;
-	background-position: top;
-	-webkit-background-size: cover;
-	background-size: cover;
+	@include bg(top, cover);
 	text-align: center;
 	h1 {
-		@include font(34px, 400, "AceSanss");
+		@include font(34px, 400, "AceSans");
 		color: #ffffff;
 		letter-spacing: 15px;
 		padding: 0 140px;
@@ -67,27 +64,17 @@ section.discover_city {
 
 /*********************** menu_for_london *********************/
 section.menu_for_london {
-	padding: 50px 0 0;
+	padding: 40px 0 0;
 	h3.section-label {
 		margin-bottom: 40px;
 	}
-	p {
-		@include font(28px, 400);
-		text-align: center;
-		color: #000;
-		line-height: 100%;
-		padding: 0 39px;
+	p.section-description {
 		margin-bottom: 65px;
-		a {
-			text-decoration: underline;
-			display: inline-block;
-			color: inherit;
-		}
 	}
 
 	.item {
 		position: relative;
-		width: calc(50% - 15px);
+		width: 100%;
 		height: 580px;
 		display: -webkit-flex;
 		display: -moz-flex;
@@ -100,13 +87,6 @@ section.menu_for_london {
 		background-size: cover;
 		background-position: center;
 		background-repeat: no-repeat;
-		&:first-child {
-			margin-right: 15px;
-		}
-
-		&:last-child {
-			margin-left: 15px;
-		}
 
 		h3 {
 			@include font(34px, 400, "AceSans");
@@ -120,7 +100,7 @@ section.menu_for_london {
 /*********************** join_team *********************/
 
 section.join_team {
-	padding-top: 60px;
+	padding-top: 35px;
 	h3.section-label {
 		margin-bottom: 40px;
 	}
@@ -229,7 +209,6 @@ section.tell_us {
 	}
 	.item {
 		position: relative;
-		width: calc(50% - 15px);
 		height: 525px;
 		display: -webkit-flex;
 		display: -moz-flex;
@@ -351,6 +330,7 @@ section.follow_us {
 	}
 	.row.flex {
 		justify-content: space-between;
+		margin: 0;
 	}
 	.item {
 		height: 165px;
@@ -433,55 +413,6 @@ section.roll_with_us {
 			bottom: 6px;
 			left: 0;
 			display: none;
-			align-items: center;
-			.checkbox {
-				position: relative;
-				overflow: hidden;
-				width: 28px;
-				height: 28px;
-				border: 2px solid #cccccc;
-				border-radius: 7px;
-				margin-right: 12px;
-				display: inline-block;
-				span.check {
-					width: calc(100% - 10px);
-					height: calc(100% - 10px);
-					position: absolute;
-					left: 0;
-					top: 0;
-					bottom: 0;
-					right: 0;
-					margin: auto;
-					background: #cccccc;
-					opacity: 0;
-					pointer-events: none;
-					transition: opacity 0.2s ease-in-out;
-				}
-				input[type="checkbox"] {
-					position: absolute;
-					background-color: transparent;
-					border: none;
-					left: 0;
-					top: 0;
-					opacity: 0;
-					&:checked ~ span.check {
-						opacity: 1;
-					}
-				}
-			}
-
-			label {
-				text-align: left;
-				font-family: 'Garamond';
-				font-weight: 600;
-				color: #000;
-				font-size: 16px;
-				line-height: 100%;
-				a {
-					text-decoration: underline;
-					color: inherit;
-				}
-			}
 		}
 	}
 	span.border {
