--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -24,17 +24,17 @@
 			<ul class="main_menu">
 				<li class="menu_item"><a href="/index.html">Home</a></li>
 				<li class="menu_item"><a href="/pages/about_us.html">About</a></li>
-				<li class="menu_item"><a href="#">Collaborate</a></li>
+				<li class="menu_item"><a href="/pages/collaborate.html">Collaborate</a></li>
 				<li class="menu_item dropdown">
 					<a class="open_dropdown">Register <i class="arrow_down"></i></a>
 					<ul class="dopdown_menu">
-						<li><a href="#">Influencers</a></li>
+						<li><a href="/pages/influencers.html">Influencers</a></li>
 						<li><a href="/pages/creatives.html">Creatives</a></li>
-						<li><a href="#">Brands & Venues</a></li>
-						<li><a href="#">British Influencer Awards</a></li>
+						<li><a href="/pages/venues.html">Brands & Venues</a></li>
+						<li><a href="/pages/bia.html">British Influencer Awards</a></li>
 					</ul>
 				</li>
-				<li class="menu_item"><a href="#">Contact</a></li>
+				<li class="menu_item"><a href="/pages/contacts.html">Contact</a></li>
 			</ul>
 			<img src="/assets/img/white-logo.png" alt="logo" class="menu_logo">
 		</nav>
