--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -127,16 +127,42 @@ a:hover {
 [class^='col-'], .col{
 	width: 100%;
 	padding: 0 15px;
+	&.xs, &.sm, &.md, &.lg {
+		width: 100%;
+	}
+}
+div.col-sm-6{
+	width: 50%;
 }
 
 @media (min-width: 1025px){
 	div.col-6{
 		width: 50%;
 	}
+	div.col-2{
+		width: 16.666666%;
+	}
+	div.col {
+		&.xs {
+			width: 19%;
+		}
+
+		&.sm {
+			width: 36%;
+		}
+
+		&.md {
+			width: 64%;
+		}
+
+		&.lg {
+			width: 81%;
+		}
+	}
 }
 
 .main-loader {
-	display: none;
+	//display: none;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -149,55 +175,50 @@ a:hover {
 	-moz-transition: opacity, 1500ms;
 	transition: opacity, 1500ms;
 	pointer-events: none;
-}
+	&.loaded {
+		opacity: 0;
+		position: absolute;
+	}
+	.line {
+		position: fixed;
+		left: 0;
+		top: 50%;
+		height: 2px;
+		width: 0;
+		background-color: #353538;
+		-webkit-transition: all 700ms cubic-bezier(0.77, 0, 0.175, 1);
+		-moz-transition: all 700ms cubic-bezier(0.77, 0, 0.175, 1);
+		transition: all 700ms cubic-bezier(0.77, 0, 0.175, 1);
+		&.max-width {
+			width: 100%;
+		}
+		&.max-height {
+			top: 0;
+			height: 100%;
+		}
+	}
 
-.main-loader.loaded {
-	opacity: 0;
-	position: absolute;
-}
-
-.main-loader .line {
-	position: fixed;
-	left: 0;
-	top: 50%;
-	height: 2px;
-	width: 0;
-	background-color: #353538;
-	-webkit-transition: all 700ms cubic-bezier(0.77, 0, 0.175, 1);
-	-moz-transition: all 700ms cubic-bezier(0.77, 0, 0.175, 1);
-	transition: all 700ms cubic-bezier(0.77, 0, 0.175, 1);
-}
-
-.main-loader .line.max-width {
-	width: 100%;
-}
-
-.main-loader .line.max-height {
-	top: 0;
-	height: 100%;
-}
-
-.main-loader .load-img {
-	position: absolute;
-	pointer-events: none;
-	left: 50%;
-	top: 50%;
-	margin-top: -10px;
-	margin-left: -10px;
-	opacity: 0;
-	background-image: url("/assets/img/one.gif");
-	background-repeat: no-repeat;
-	background-size: 100%;
-	width: 30px;
-	height: 30px;
-	-webkit-transition: all 300ms cubic-bezier(0.77, 0, 0.175, 1);
-	-moz-transition: all 300ms cubic-bezier(0.77, 0, 0.175, 1);
-	transition: all 300ms cubic-bezier(0.77, 0, 0.175, 1);
-}
-
-.main-loader .load-img.visible {
-	opacity: 1;
-	position: fixed;
+	.load-img {
+		position: absolute;
+		pointer-events: none;
+		left: 50%;
+		top: 50%;
+		margin-top: -10px;
+		margin-left: -10px;
+		opacity: 0;
+		background-image: url("/assets/img/one.gif");
+		background-repeat: no-repeat;
+		background-size: 100%;
+		width: 30px;
+		height: 30px;
+		-webkit-transition: all 300ms cubic-bezier(0.77, 0, 0.175, 1);
+		-moz-transition: all 300ms cubic-bezier(0.77, 0, 0.175, 1);
+		transition: all 300ms cubic-bezier(0.77, 0, 0.175, 1);
+		&.visible {
+			opacity: 1;
+			position: fixed;
+		}
+	}
 }
 
 form {
@@ -261,94 +282,90 @@ form {
 			}
 		}
 	}
-}
 
-form input, form textarea, form select {
-	@include font(18px, 400, "Garamond");
-	width: 100%;
-	height: 32px;
-	border-radius: 7px;
-	color: rgba(0, 0, 0, 0.63);
-	padding: 0 19px;
-	background-color: #fff;
-	border: 1px solid transparent;
-	outline: none;
-	box-shadow: none;
-	transition: border-color 0.2s ease-in-out;
-	resize: none;
-	-webkit-appearance: none;
-	&.grey{
-		border: 1px solid #919191;
+	input, textarea, select {
+		@include font(18px, 400, "Garamond");
+		width: 100%;
+		height: 32px;
+		border-radius: 7px;
+		color: rgba(0, 0, 0, 0.63);
+		padding: 0 19px;
+		background-color: #fff;
+		border: 1px solid transparent;
+		outline: none;
+		box-shadow: none;
+		transition: border-color 0.2s ease-in-out;
+		resize: none;
+		-webkit-appearance: none;
+		&.grey{
+			border: 1px solid #919191;
+			&:hover {
+				border-color: #151515;
+			}
+		}
 		&:hover {
-			border-color: #151515;
+			& ~ span.arrow{
+				opacity: 0.8;
+			}
+		}
+		&::placeholder{
+			color: rgba(0, 0, 0, 0.63);
+		}
+
+	}
+
+	input{
+		&.small {
+			max-width: 106px;
+			width: 100%;
+		}
+
+		&:hover {
+			border-color: #fff;
 		}
 	}
-	&:hover {
-		& ~ span.arrow{
+
+	label.select-options{
+		position: relative;
+		span.arrow{
+			position: absolute;
+			pointer-events: none;
+			@include bg(center, contain);
+			background-image: url(/assets/img/arrow_down.png);
+			width: 12px;
+			height: 9px;
+			right: 10px;
+			top: 0;
+			bottom: 0;
+			margin: auto;
+		}
+	}
+
+	textarea {
+		padding-top: 3px;
+	}
+
+	button {
+		height: 32px;
+		line-height: 32px;
+		@include font(20px, 600, "Garamond");
+		color: rgba(0, 0, 0, 0.63);
+		background-color: #fff;
+		border: none;
+		border-radius: 7px;
+		outline: none;
+		cursor: pointer;
+		box-shadow: none;
+		transition: opacity 0.2s ease-in-out;
+		&.grey{
+			border: 2px solid #919191;
+			background-color: #e0e0e0;
+			line-height: 100%;
+		}
+		&:hover {
 			opacity: 0.8;
 		}
 	}
-
-	&::-webkit-input-placeholder, &::-moz-placeholder, &:-ms-input-placeholder, &:-moz-placeholder {
-		color: rgba(0, 0, 0, 0.63);
-	}
-	&::placeholder{
-		color: rgba(0, 0, 0, 0.63);
-	}
-}
-
-form label.select-options{
-	position: relative;
-	span.arrow{
-		position: absolute;
-		pointer-events: none;
-		@include bg(center, contain);
-		background-image: url(/assets/img/arrow_down.png);
-		width: 12px;
-		height: 9px;
-		right: 10px;
-		top: 0;
-		bottom: 0;
-		margin: auto;
-	}
-}
-
-form textarea {
-	padding-top: 3px;
-}
-
-form input.small {
-	max-width: 106px;
-	width: 100%;
-}
-
-form input:hover {
-	border-color: #fff;
-}
-
-
-form button {
-	height: 32px;
-	line-height: 32px;
-	@include font(20px, 600, "Garamond");
-	color: rgba(0, 0, 0, 0.63);
-	background-color: #fff;
-	border: none;
-	border-radius: 7px;
-	outline: none;
-	cursor: pointer;
-	box-shadow: none;
-	transition: opacity 0.2s ease-in-out;
-
-	&.grey{
-		border: 2px solid #919191;
-		background-color: #e0e0e0;
-		line-height: 100%;
-	}
-}
-
-form button:hover {
-	opacity: 0.8;
 }
 
 span.border {
@@ -367,7 +384,7 @@ span.border {
 
 h3.section-label {
 	@include font(31px, 400, "Brandon");
-	line-height: 34px;
+	line-height: 35px;
 	color: #000;
 	letter-spacing: 14px;
 	text-align: center;
@@ -423,214 +440,204 @@ header {
 	padding: 20px 0 0;
 	width: 100%;
 	z-index: 10;
-}
+	.header_bg {
+		position: absolute;
+		width: 100%;
+		height: 65px;
+		top: -65px;
+		opacity: 0;
+		left: 0;
+		background-color: #fff;
+		display: none;
+		align-items: center;
+		padding-left: 15px;
+		transition: opacity 0.2s ease, top 0.2s ease;
+		a.logo {
+			opacity: 1;
+			position: relative;
+			z-index: 2;
+			line-height: 0;
+			img {
+				width: 136px;
+			}
+		}
+	}
 
-header .header_bg {
-	position: absolute;
-	width: 100%;
-	height: 65px;
-	top: -65px;
-	opacity: 0;
-	left: 0;
-	background-color: #fff;
-	display: none;
-	align-items: center;
-	padding-left: 15px;
-	transition: opacity 0.2s ease, top 0.2s ease;
-}
+	.logo {
+		float: left;
+		img {
+			max-width: 300px;
+		}
+	}
 
-header .header_bg a.logo {
-	opacity: 1;
-	position: relative;
-	z-index: 2;
-	line-height: 0;
-}
+	.auth_button {
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+		float: right;
+		align-items: center;
+		a {
+			margin-left: 23px;
+		}
 
-header .header_bg a.logo img {
-	width: 136px;
-}
+		.sign_in {
+			@include font(23px, 400, "Garamond");
+			color: #737373;
+		}
 
-header .logo {
-	float: left;
-}
+		.join {
+			@include font(23px, 600, "Garamond");
+			color: #737373;
+			border: 2px solid #737373;
+			height: 36px;
+			line-height: 100%;
+			border-radius: 8px;
+			padding: 5px 28px 5px;
+		}
+	}
 
-header .logo img {
-	max-width: 300px;
-}
+	.open_menu_btn {
+		position: relative;
+		float: right;
+		display: none;
+		width: 33px;
+		height: 33px;
+		margin-top: 9px;
+		border: 1px solid #fff;
+		border-radius: 7px;
+		padding: 5px;
+		background-color: transparent;
+		outline: none;
+		overflow: hidden;
+		box-shadow: none;
+		transition: border-color 0.2s ease-in-out;
+		z-index: 10;
+		&.grey {
+			border-color: #919191;
+			span {
+				background-color: #919191;
+			}
+		}
 
-header .auth_button {
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	float: right;
-	align-items: center;
-}
+		span {
+			height: 5px;
+			width: 100%;
+			display: block;
+			background-color: #fff;
+			margin-bottom: 3px;
+			transform-origin: right;
+			transform: rotate(0deg) translateX(0px);
+			transition: background-color 0.3s ease-in-out, opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
 
-header .auth_button a {
-	margin-left: 23px;
-}
+		&.opened_btn {
+			span{
+				&:first-child {
+					transform: rotate(-43deg) translateX(-2px) translateY(-1px);
+				}
+				&:nth-child(2) {
+					opacity: 0;
+					transform: translateX(20px);
+				}
+				&:last-child {
+					transform: rotate(47deg) translateY(2px) translateX(-2px);
+				}
+			}
+		}
+	}
 
-header .auth_button .sign_in {
-	@include font(23px, 400, "Garamond");
-	color: #737373;
-}
+	nav {
+		width: 100%;
+		img.menu_logo {
+			display: none;
+		}
 
-header .auth_button .join {
-	@include font(23px, 600, "Garamond");
-	color: #737373;
-	border: 2px solid #737373;
-	height: 36px;
-	line-height: 100%;
-	border-radius: 8px;
-	padding: 5px 28px 5px;
-}
+		ul.main_menu {
+			display: -webkit-flex;
+			display: -moz-flex;
+			display: -ms-flex;
+			display: -o-flex;
+			display: flex;
+			justify-content: flex-end;
+			align-items: center;
+			padding: 23px 0 0;
+			margin: 0;
+			list-style: none;
+			li.menu_item {
+				margin-left: 55px;
+				padding-bottom: 20px;
+				a {
+					@include font(22px, 400, "Garamond");
+					color: #737373;
+					&.active {
+						font-weight: 600;
+					}
+				}
+				a.open_dropdown.opened i {
+					transform: rotate(180deg);
+				}
 
-header .open_menu_btn {
-	position: relative;
-	float: right;
-	display: none;
-	width: 33px;
-	height: 33px;
-	margin-top: 9px;
-	border: 1px solid #fff;
-	border-radius: 7px;
-	padding: 5px;
-	background-color: transparent;
-	outline: none;
-	overflow: hidden;
-	box-shadow: none;
-	transition: border-color 0.2s ease-in-out;
-	z-index: 10;
-}
+				&.dropdown {
+					position: relative;
+					i.arrow_down {
+						background-image: url(/assets/img/arrow_down.png);
+						-webkit-background-size: contain;
+						background-size: contain;
+						background-position: center;
+						background-repeat: no-repeat;
+						width: 12px;
+						height: 9px;
+						margin-left: 7px;
+						display: inline-block;
+						transition: transform 0.3s ease-in-out;
+					}
 
-header .open_menu_btn.grey {
-	border-color: #919191;
-}
+					&:hover i{
+						transform: rotate(180deg);
+					}
 
-header .open_menu_btn.grey span {
-	background-color: #919191;
-}
+					&:hover ul.dopdown_menu {
+						margin-top: 19px;
+						opacity: 1;
+						pointer-events: auto;
+					}
 
-header .open_menu_btn span {
-	height: 5px;
-	width: 100%;
-	display: block;
-	background-color: #fff;
-	margin-bottom: 3px;
-	transform-origin: right;
-	transform: rotate(0deg) translateX(0px);
-	transition: background-color 0.3s ease-in-out, opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-}
+					ul.dopdown_menu {
+						position: absolute;
+						margin-top: 0px;
+						width: 150px;
+						opacity: 0;
+						background-color: #fff;
+						padding: 15px;
+						list-style: none;
+						pointer-events: none;
+						left: 50%;
+						transform: translateX(-50%);
+						border-bottom-right-radius: 7px;
+						border-bottom-left-radius: 7px;
+						transition: opacity 0.3s ease-in-out, margin-top 0.3s ease-in-out;
+						li {
+							margin-bottom: 21px;
+							&:last-child {
+								margin-bottom: 0;
+							}
 
-header .open_menu_btn span:last-child {
-	margin-bottom: 0;
-}
-
-header .open_menu_btn.opened_btn span:first-child {
-	transform: rotate(-43deg) translateX(-2px) translateY(-1px);
-}
-
-header .open_menu_btn.opened_btn span:nth-child(2) {
-	opacity: 0;
-	transform: translateX(20px);
-}
-
-header .open_menu_btn.opened_btn span:last-child {
-	transform: rotate(47deg) translateY(2px) translateX(-2px);
-}
-
-header nav {
-	width: 100%;
-}
-
-header nav img.menu_logo {
-	display: none;
-}
-
-header nav ul.main_menu {
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-	padding: 23px 0 0;
-	margin: 0;
-	list-style: none;
-}
-
-header nav ul.main_menu li.menu_item {
-	margin-left: 55px;
-	padding-bottom: 20px;
-}
-
-header nav ul.main_menu li.menu_item a {
-	@include font(22px, 400, "Garamond");
-	color: #737373;
-}
-
-header nav ul.main_menu li.menu_item a.active {
-	font-weight: 600;
-}
-
-header nav ul.main_menu li.menu_item.dropdown {
-	position: relative;
-}
-
-header nav ul.main_menu li.menu_item.dropdown i.arrow_down {
-	background-image: url(/assets/img/arrow_down.png);
-	-webkit-background-size: contain;
-	background-size: contain;
-	background-position: center;
-	background-repeat: no-repeat;
-	width: 12px;
-	height: 9px;
-	margin-left: 7px;
-	display: inline-block;
-	transition: transform 0.3s ease-in-out;
-}
-
-header nav ul.main_menu li.menu_item.dropdown:hover i, header nav ul.main_menu li.menu_item a.open_dropdown.opened i {
-	transform: rotate(180deg);
-}
-
-header nav ul.main_menu li.menu_item.dropdown:hover ul.dopdown_menu {
-	margin-top: 19px;
-	opacity: 1;
-	pointer-events: auto;
-}
-
-header nav ul.main_menu li.menu_item.dropdown ul.dopdown_menu {
-	position: absolute;
-	margin-top: 0px;
-	width: 150px;
-	opacity: 0;
-	background-color: #fff;
-	padding: 15px;
-	list-style: none;
-	pointer-events: none;
-	left: 50%;
-	transform: translateX(-50%);
-	border-bottom-right-radius: 7px;
-	border-bottom-left-radius: 7px;
-	transition: opacity 0.3s ease-in-out, margin-top 0.3s ease-in-out;
-}
-
-header nav ul.main_menu li.menu_item.dropdown ul.dopdown_menu li {
-	margin-bottom: 21px;
-}
-
-header nav ul.main_menu li.menu_item.dropdown ul.dopdown_menu li:last-child {
-	margin-bottom: 0;
-}
-
-header nav ul.main_menu li.menu_item.dropdown ul.dopdown_menu li a {
-	@include font(18px, 300, "Brandon");
-	letter-spacing: -0.4px;
-	line-height: 22px;
+							a {
+								@include font(18px, 300, "Brandon");
+								letter-spacing: -0.4px;
+								line-height: 22px;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 section {
@@ -675,12 +682,117 @@ section {
 			text-align: center;
 		}
 	}
+
+	// pages: creative reg, venue reg, contact, bia
+	form.collect-info-form {
+		display: block;
+
+		input, textarea, label.select-options {
+			margin-bottom: 20px;
+			display: block;
+		}
+
+		button {
+			padding: 0 18px;
+			margin-left: 20px;
+			margin-top: 25px;
+		}
+
+		textarea{
+			height: calc(100% - 20px);
+			min-height: 88px;
+		}
+
+		.check_terms {
+			display: -webkit-flex;
+			display: -moz-flex;
+			display: -ms-flex;
+			display: -o-flex;
+			display: flex;
+			margin-top: 25px;
+
+			label {
+				font-size: 20px;
+			}
+		}
+
+		@media only screen and (max-width: 1024px){
+			input, label.select-options, textarea{
+				margin-bottom: 15px;
+				display: block;
+
+			}
+
+			input, textarea, select{
+				border-width: 2px;
+			}
+
+			button{
+				margin-top: 0;
+			}
+			.check_terms{
+				margin-top: 0;
+				label{
+					font-size: 16px;
+					a:first-of-type{
+						display: block;
+					}
+					span{
+						display: none;
+					}
+				}
+			}
+		}
+	}
+
+	/************************  follow_us section *************************/
+	&.follow_us {
+		padding-top: 65px;
+		h3.section-label {
+			margin-bottom: 60px;
+		}
+		.row.flex {
+			//justify-content: space-between;
+			//margin: 0;
+		}
+		.item {
+			height: 165px;
+			width: 165px;
+			margin-left: 15px;
+			margin-right: 15px;
+			-webkit-background-size: cover;
+			background-size: cover;
+			background-position: center;
+			background-repeat: no-repeat;
+		}
+		p {
+			@include font(28px, 400);
+			text-align: center;
+			color: #000;
+			line-height: 100%;
+			padding: 0 39px;
+			margin-top: 43px;
+			a {
+				display: inline-block;
+				color: inherit;
+				margin-left: 9px;
+				vertical-align: middle;
+			}
+		}
+		img {
+			max-width: 40px;
+		}
+	}
 }
 
 //********************************** PAGES *************************************
 @import "pages/home";
 @import "pages/about_us";
 @import "pages/creatives";
+@import "pages/collaborate";
+@import "pages/contacts";
+@import "pages/bia";
+@import "pages/influencers";
 
 
 
@@ -760,8 +872,13 @@ footer {
 			height: 40px;
 			padding: 0 15px;
 			border: 2px solid #fff;
+			color: rgba(255,255,255,0.75);
 			border-radius: 7px;
 			margin-right: 5px;
+			background-color: transparent;
+		}
+		form input::placeholder{
+			color: rgba(255,255,255,0.75);
 		}
 
 		form button {
@@ -778,4 +895,16 @@ footer {
 	}
 }
 
+
+@media (min-width: 601px){
+	.hidden-sm{
+		display: none!important;
+	}
+}
+
+@media (max-width: 600px){
+	.hidden-xs {
+		display: none;
+	}
+}
 @import "utils/media";
