--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -5,7 +5,7 @@
 		</span>
 <div class="container">
 	<div class="row">
-		<a href="#" class="logo">
+		<a href="/" class="logo">
 			<img src="/assets/img/logo_black.png" alt="header-logo">
 		</a>
 		<div class="auth_button">
